--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Typescript</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>Typescript Übungen</h1>
+    <ul>
+      <li>
+        <a href="./src/Tag_1_Basics/basic.html">Tag 1: Basics</a>
+      </li>
+    </ul>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
