--- a/src/Tag_1_Basics/basic.html
+++ b/src/Tag_1_Basics/basic.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Typescript hallo</title>
+    <script type="module" src="basic.ts"></script>
 </head>
 <body>
-    <h1>Hallo willkommen!!!</h1>
+    <h1>Hallo es funktioniert!!!</h1>
 </body>
 </html>
